@@ -54,7 +54,7 @@ project = expression '{' [ALL BUT] [id {',' id}] '}'.
 
 where = expression WHERE expression.
 
-rename = expression RENAME '(' [id AS id {',' id AS id}] ')'.
+rename = expression RENAME '{' [id AS id {',' id AS id}] '}'.
 
 dyadic_relation_op_inv = expression UNION expression
         | expression INTERSECT expression
@@ -70,7 +70,7 @@ extend = EXTEND expression ':' '{' [id ':=' expression {',' id ':=' expression}]
 update = UPDATE expression ':' '{' id ':=' expression {',' id ':=' expression} '}'.
 
 summarize = SUMMARIZE expression PER expression
-           ADD '(' [summary AS id {',' summary AS id}] ')'.
+           ':' '{' [summary AS id {',' summary AS id}] '}'.
 
 divideby = expression DIVIDEBY expression PER expression.
 
