@@ -18,7 +18,7 @@ test vtables {virtual tables} -setup $SETUP -body {
 
     # Create Database
     duro::db create $dbenv TEST
-    
+
     set tx [duro::begin $dbenv TEST]
 
     # Check creating virtual table from non-relation-valued expression
@@ -89,7 +89,7 @@ test vtables {virtual tables} -setup $SETUP -body {
     duro::table expr -global TI {T1 INTERSECT T2} $tx
     duro::table expr -global VT {T1 JOIN T3} $tx
     duro::table rename VT TJ $tx
-    duro::table expr -global TR {T1 RENAME (K AS KN, S1 AS SN)} $tx
+    duro::table expr -global TR {T1 RENAME { K AS KN, S1 AS SN }} $tx
     if {![catch {
         duro::table expr -global TEX \
                 {EXTEND T1 : {K0 := K*10, KIS1 := IF K = 0 THEN "YES" ELSE 1}} $tx
@@ -109,7 +109,7 @@ test vtables {virtual tables} -setup $SETUP -body {
     }
 
     # Empty RENAME
-    duro::table expr -local TER {T1 RENAME ()} $tx
+    duro::table expr -local TER {T1 RENAME { } } $tx
     set tpl [duro::expr {TUPLE FROM TER WHERE K=1} $tx]
     if {![tequal $tpl {K 1 S1 Bla}]} {
         error "Invalid tuple value: $tpl"
@@ -125,7 +125,7 @@ test vtables {virtual tables} -setup $SETUP -body {
     duro::table drop TEX $tx
 
     # Empty SUMMARIZE PER
-    duro::table expr -local TES {SUMMARIZE T1 PER T1 { K } ADD ()} $tx
+    duro::table expr -local TES {SUMMARIZE T1 PER T1 { K } : { } } $tx
     set v [duro::expr {(TUPLE FROM TES WHERE K=3).K} $tx]
     if {$v != 3} {
         error "Invalid attribute value: $tpl"
@@ -148,7 +148,7 @@ test vtables {virtual tables} -setup $SETUP -body {
     duro::table expr -global TJ2 {(T1 WHERE K = 2) JOIN (T3 WHERE K = 2)} $tx
     duro::table expr -global TS {T1 WHERE S1 > "Bla"} $tx
     duro::table expr -global TSM {SUMMARIZE T4 PER T4 { A }
-            ADD (MIN(B) AS MIN_B, MAX(B) AS MAX_B, COUNT() AS CNT)} $tx
+            : { MIN_B := MIN(B), MAX_B := MAX(B), CNT := COUNT() } } $tx
     duro::table expr -global TSMN {T1 SEMIMINUS T3} $tx
     duro::table expr -global TSJ {T1 SEMIJOIN T3} $tx
 
@@ -443,7 +443,7 @@ test vtables {virtual tables} -setup $SETUP -body {
     
     duro::table expr t {EXTEND TABLE_DEE
             : {R := EXTEND TABLE_DEE : {N := 1} WRAP ({ N } AS T)} } $tx
-    
+
     duro::table drop t $tx
     
     duro::table expr t {EXTEND TABLE_DEE
@@ -464,10 +464,10 @@ test vtables {virtual tables} -setup $SETUP -body {
     
     duro::table expr t {EXTEND TABLE_DEE
             : {R := SUMMARIZE (EXTEND TABLE_DEE : {N := 1})
-                 PER TABLE_DEE ADD (COUNT() AS C)}} $tx
-    
+                 PER TABLE_DEE : { C := COUNT() } } } $tx
+
     duro::table drop t $tx
-    
+
     duro::table expr t {EXTEND TABLE_DEE
             : {R := (EXTEND TABLE_DEE : {N := 1, M := 2}
                  GROUP { N, M } AS R) UNGROUP R}} $tx
